# ai-game-engine

./: .dockerignore  .env.production  .gitignore  Dockerfile  Readme.md  compose-dev.yml  compose-product.yml  compose.production.yml  compose.yml  config.py  config.py.example  create_game.py  create_session.py  docker-compose.yml  init_db.sh  manage.py  requirements.txt  run_session.py  serve.sh  server.py  setup.py  start.sh  wsgi.py
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_v2_initial_schema.py  0002_identity_sessions.py  0003_catalog_learning_section.py  0004_multiplayer_match_bounds.py  0005_training_lobby_match_groups.py  0006_lobby_management.py  0007_execution_run_lobby_indexes.py  0008_replay_list_indexes.py  0008_spectator_replay_list_indexes.py  0009_match_executions.py  0010_lobby_cumulative_stats.py  0011_run_active_lease_id.py  0012_execution_run_result_summary.py
backend/src/administration/: README.md
backend/tests/: conftest.py  test_alembic_schema.py  test_antiplagiarism_api.py  test_competition_api.py  test_competition_version_block.py  test_core_sqlalchemy_repositories.py  test_demo_strategies.py  test_execution_sqlalchemy_repository.py  test_existing_game_regressions.py  test_game_catalog_metadata_api.py  test_game_catalog_read_api.py  test_game_docs_and_grouped_catalog_api.py  test_game_manifest_loader.py  test_game_sources_api.py  test_game_templates_api.py  test_health.py  test_http_builder_gateway.py  test_identity_auth_api.py  test_identity_sqlalchemy_repository.py  test_internal_run_accept_api.py  test_lobby_competition_stream_api.py  test_lobby_status_api.py  test_lobby_user_flow_api.py  test_lobby_version_revalidate.py  test_manifest_seeded_catalog.py  test_new_student_games.py  test_pregraph_game_packages.py  test_result_payload_contract.py  test_run_execution_context.py  test_run_input_validation.py  test_run_snapshot_freeze.py  test_run_stream_api.py  test_run_watch_context_api.py  test_runs_list_api.py  test_scheduler_enqueue_integration.py  test_single_task_attempts_api.py  test_single_task_parallel_limit.py  test_single_task_progress_api.py  test_single_task_script_engines.py  test_spectator_replay_api.py  (+10 more)
ge_sdk/: __init__.py  ge_sdk.py  pyproject.toml
ge_sdk/ge_sdk/: __init__.py  ge_sdk.py  isolation.py
services/builder/: Dockerfile  pyproject.toml
services/worker/: Dockerfile  pyproject.toml
(+807 files in other folders)
