[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ge_sdk"
version = "1.1.0"
authors = [
    { name = "roctbb" },
    { name = "DenisIndenbom" }
]
description = "It's a SDK for ai-game-engine."
requires-python = ">=3.6"

[tool.setuptools]
packages = ["ge_sdk"]
